--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
     "pug": "2.0.0-beta11",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "urlencode": "^1.1.0"
   }
 }
